testing cv download link

--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
   </head>
   <body>
     <header class="header" id="header">
-      <nav class="nav" id="nav">
-        <a href="#home" id="home-nav" class="home-nav">Home</a>
-        <a href="#aboutme" id="aboutme-nav" class="aboutme-nav">About Me </a>
-        <a href="#skills" id="skills-nav" class="skills-nav">Skills </a>
-        <a href="#projects" id="projects-nav" class="projects-nav">Projects </a>
-        <a href="#contact" id="contact-nav" class="contact-nav">Contact </a>
-      </nav>
+      <div class="container topbar-inner">
+        <nav class="nav" id="nav">
+          <a href="#home" id="home-nav" class="home-nav">Home</a>
+          <a href="#aboutme" id="aboutme-nav" class="aboutme-nav">About Me </a>
+          <a href="#skills" id="skills-nav" class="skills-nav">Skills </a>
+          <a href="#projects" id="projects-nav" class="projects-nav"
+            >Projects
+          </a>
+          <a href="#contact" id="contact-nav" class="contact-nav">Contact </a>
+        </nav>
+        <div class="row topbar-actions">
+          <a href="./assets/NurJunaina2025.pdf" class="btn btn-outline" download
+            >CV</a
+          >
+        </div>
+      </div>
     </header>
     <section class="home" id="home"></section>
     <section class="aboutme" id="aboutme"></section>
