contact and about

--- a/index.html
+++ b/index.html
@@ -492,17 +492,46 @@
             <article class="card project-card">
               <div class="stack">
                 <img src="" alt="" />
-                <h3 class="project-title">Project 1</h3>
-                <p class="description"></p>
+                <h3 class="project-title">Shuffl</h3>
+                <p class="description">One-Day Coding Project Idea Generator</p>
                 <div class="projects-card-actions row">
                   <a
-                    href="https://github.com/junaina"
+                    href="https://shuffl-rho.vercel.app/"
                     target="_blank"
                     rel="noreferrer"
                     >Live</a
                   >
                   <a
-                    href="https://github.com/junaina"
+                    href="https://github.com/junaina/shuffl"
+                    target="_blank"
+                    rel="noreferrer"
+                    >Repo</a
+                  >
+                </div>
+              </div>
+            </article>
+
+            <article class="card project-card">
+              <div class="stack">
+                <img src="" alt="" />
+                <h3 class="project-title">
+                  Momentum Habit Tracker (Ongoing Project)
+                </h3>
+                <p class="description">
+                  Building a minimal, habit tracker focused on a “check-in in
+                  seconds” daily flow and a weekly progress view. Version 2
+                  incorporates a community and challenges mode as well. </br>Think
+                  Duolingo meets Todoist.
+                </p>
+                <div class="projects-card-actions row">
+                  <a
+                    href="https://momentum-rust-six.vercel.app/demo/today"
+                    target="_blank"
+                    rel="noreferrer"
+                    >Live</a
+                  >
+                  <a
+                    href="https://github.com/junaina/momentum"
                     target="_blank"
                     rel="noreferrer"
                     >Repo</a
@@ -513,17 +542,17 @@
             <article class="card project-card">
               <div class="stack">
                 <img src="" alt="" />
-                <h3 class="project-title">Project 2</h3>
-                <p class="description"></p>
+                <h3 class="project-title">
+                 NLP BizMatch
+                </h3>
+                <p class="description">
+                  
+                  A digital services and product provider matcher for small businesses. </br>Think
+                  Duolingo meets Todoist.
+                </p>
                 <div class="projects-card-actions row">
                   <a
-                    href="https://github.com/junaina"
-                    target="_blank"
-                    rel="noreferrer"
-                    >Live</a
-                  >
-                  <a
-                    href="https://github.com/junaina"
+                    href="https://github.com/junaina/nlp-biz-match"
                     target="_blank"
                     rel="noreferrer"
                     >Repo</a
@@ -534,17 +563,15 @@
             <article class="card project-card">
               <div class="stack">
                 <img src="" alt="" />
-                <h3 class="project-title">Project 3</h3>
-                <p class="description"></p>
+                <h3 class="project-title">ACT Consultants Roster</h3>
+                <p class="description">
+                  A role-based consultant management system for a non-profit
+                  organization. Implemented authentication, authorization, and
+                  admin dashboards.
+                </p>
                 <div class="projects-card-actions row">
                   <a
-                    href="https://github.com/junaina"
-                    target="_blank"
-                    rel="noreferrer"
-                    >Live</a
-                  >
-                  <a
-                    href="https://github.com/junaina"
+                    href="https://github.com/junaina/act-consultants-roster"
                     target="_blank"
                     rel="noreferrer"
                     >Repo</a
@@ -552,6 +579,24 @@
                 </div>
               </div>
             </article>
+            <article class="card project-card">
+              <div class="stack">
+                <img src="" alt="" />
+                <h3 class="project-title">Mindmesh Final Year Project</h3>
+                <p class="description">
+                  A full-stack project management and collaboration platform.
+                </p>
+                <div class="projects-card-actions row">
+                  <a
+                    href="https://github.com/junaina/FYP-F-25-D-123-mindmesh-code"
+                    target="_blank"
+                    rel="noreferrer"
+                    >Repo</a
+                  >
+                </div>
+              </div>
+            </article>
+
             <article class="card project-card">
               <div class="stack">
                 <img src="" alt="" />
@@ -581,16 +626,18 @@
         <div class="container">
           <div class="aboutme-section grid">
             <div class="aboutme-media">
-              <img src="./assets/nur.png" alt="secondary profile image" />
+              <img src="./assets/nur-about.png" alt="secondary profile image" />
             </div>
             <div class="aboutme-content stack">
-              <h2>About Me</h2>
+              <h2>The Vision: A Relentless Pursuit of Excellence</h2>
+              
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum,
-                sequi aspernatur molestiae dolores delectus consequatur
-                dignissimos distinctio necessitatibus aliquid vero sed
-                recusandae alias facilis? Praesentium numquam expedita molestiae
-                accusamus asperiores?
+               At my core I am a builder in search of real user problems to solve with my craft. Tech stacks are simply tools to achieve that. Hence, I remain open minded, keeping user value at the center of what I build .
+                <br>
+                <br>
+                I spend my time developing software, recording and editing films and reading books. I'm an artist at heart, and a perfectionist. 
+                <br>
+                <br>
               </p>
             </div>
           </div>
