--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 class="profile_img"
               />
             </div>
-            <h1>Nur Junaina</h1>
-            <p class="profile_role muted">Full Stack Developer</p>
+            <h1>Hi! I'm Nur Junaina</h1>
+            <p class="profile_role muted">I'm a Full-Stack Web Developer</p>
           </div>
         </div>
       </section>
@@ -491,9 +491,9 @@
           <div class="projects-section grid">
             <article class="card project-card">
               <div class="stack">
-                <img src="" alt="" />
+                <img src="assets/projects/shuffl.png" alt="" />
                 <h3 class="project-title">Shuffl</h3>
-                <p class="description">One-Day Coding Project Idea Generator</p>
+                <p class="description">One-Day Coding Project Idea Generator Helps users ditch generic projects like weather apps in favor of meaningful one-day builds. Generates ideas based on domain interests, difficulty, and tech stack.</p>
                 <div class="projects-card-actions row">
                   <a
                     href="https://shuffl-rho.vercel.app/"
@@ -513,7 +513,7 @@
 
             <article class="card project-card">
               <div class="stack">
-                <img src="" alt="" />
+                <img src="./assets/projects/momentum.png" alt="" />
                 <h3 class="project-title">
                   Momentum Habit Tracker (Ongoing Project)
                 </h3>
@@ -541,15 +541,13 @@
             </article>
             <article class="card project-card">
               <div class="stack">
-                <img src="" alt="" />
+                <img src="./assets/projects/BizMatch5.png" alt="" />
                 <h3 class="project-title">
                  NLP BizMatch
                 </h3>
                 <p class="description">
                   
-                  A digital services and product provider matcher for small businesses. </br>Think
-                  Duolingo meets Todoist.
-                </p>
+                  A digital services and product provider matcher for small businesses.
                 <div class="projects-card-actions row">
                   <a
                     href="https://github.com/junaina/nlp-biz-match"
@@ -562,7 +560,7 @@
             </article>
             <article class="card project-card">
               <div class="stack">
-                <img src="" alt="" />
+                <img src="assets/projects/act.png" alt="" />
                 <h3 class="project-title">ACT Consultants Roster</h3>
                 <p class="description">
                   A role-based consultant management system for a non-profit
@@ -581,10 +579,12 @@
             </article>
             <article class="card project-card">
               <div class="stack">
-                <img src="" alt="" />
+                <img src="assets/projects/mindmesh.png" alt="" />
                 <h3 class="project-title">Mindmesh Final Year Project</h3>
                 <p class="description">
-                  A full-stack project management and collaboration platform.
+                  A full-stack project management and collaboration platform. 
+                  <br>
+                  Think Notion + Slack + Google Meet + Fireflies AI combined into a single app, with no distractions. No more app switching
                 </p>
                 <div class="projects-card-actions row">
                   <a
@@ -603,17 +603,12 @@
                 <h3 class="project-title">Check Out More on GitHub</h3>
                 <p class="description"></p>
                 <div class="projects-card-actions row">
+                 
                   <a
                     href="https://github.com/junaina"
                     target="_blank"
                     rel="noreferrer"
-                    >Live</a
-                  >
-                  <a
-                    href="https://github.com/junaina"
-                    target="_blank"
-                    rel="noreferrer"
-                    >Repo</a
+                    >Take me to GitHub</a
                   >
                 </div>
               </div>
@@ -652,7 +647,7 @@
               >Find Me on Linkedin</a
             >
             <a href="mailto:junainanur@gmail.com" class="contact-link"
-              >Email Me</a
+              >Email me at junainanur@gmail.com</a
             >
           </div>
         </div>
