--- a/index.html
+++ b/index.html
@@ -627,10 +627,10 @@
               <h2>The Vision: A Relentless Pursuit of Excellence</h2>
               
               <p>
-               At my core I am a builder in search of real user problems to solve with my craft. Tech stacks are simply tools to achieve that. Hence, I remain open minded, keeping user value at the center of what I build .
-                <br>
-                <br>
-                I spend my time developing software, recording and editing films and reading books. I'm an artist at heart, and a perfectionist. 
+               I’ve always seen myself as someone chasing excellence — good enough simply doesn’t cut it for me. That’s been a bit of a running theme in my life. Outside of development, I’m really into filmmaking, personal growth, and I’ve got a genuine appreciation for a good book and good music.
+               <br>
+               <br>              
+               Whether I’m spending ages perfecting a clip I’ve shot or putting proper DevOps pipelines around my personal projects so they don’t fall over, it’s always the same idea: <i>keep refining the craft, keep raising the bar.</i> <br> <br> I’m constantly learning as I go — because that’s the whole point of it. For me, software, web development, NLP, and agentic AI aren’t just “tech”; they’re tools I use to solve genuine user problems, the people’s problems. And honestly, that’s what matters most. At the end of the day, it’s always about the people.
                 <br>
                 <br>
               </p>
